@@ -2,3 +2,4 @@ farming
 default
 wool
 beds
+thirsty?
